apps/tailscale-auth-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tailscale-auth-test
  namespace: tailscale-auth-test
spec:
  ports:
  - port: 8000
  selector:
    app: tailscale-auth-test
