apps/tailscale-auth-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-auth-test
  namespace: tailscale-auth-test
  annotations:
    tailscale.com/funnel: "true" # Technically externally accessible via Tailscale Funnel
spec:
  ingressClassName: internal
  tls: 
  - hosts:
    - "tailscale-auth-test"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tailscale-auth-test
            port:
              number: 8000
